# CRY

./: CMakeLists.txt  COPYING-RES.txt  Makefile.am  Makefile.in  README.md  configure.ac  vcpkg.json
.github/workflows/: main.yml
cmake/: config.h.cin
data/: README  doom.desktop
opl/: ioperm_sys.c  ioperm_sys.h  opl.c  opl.h  opl3.c  opl3.h  opl_internal.h  opl_linux.c  opl_obsd.c  opl_queue.c  opl_queue.h  opl_sdl.c  opl_timer.c  opl_timer.h  opl_win32.c
src/: CMakeLists.txt  Makefile.am  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doom-res.rc.in  doomfeatures.h  doomkeys.h  doomtype.h  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_main.c  i_musicpack.c  i_oplmusic.c  i_pcsound.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_sound.h  i_swap.h  i_system.c  (+76 more)
src/doom/: CMakeLists.txt  Makefile.am  am_map.c  am_map.h  ct_chat.c  ct_chat.h  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_textur.h  d_think.h  deh_ammo.c  deh_bexptr.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  dstrings.c  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  (+76 more)
src/setup/: Makefile.am  compatibility.c  compatibility.h  display.c  display.h  execute.c  execute.h  joystick.c  joystick.h  keyboard.c  keyboard.h  mainmenu.c  mode.c  mode.h  mouse.c  mouse.h  setup_icon.c  sound.c  sound.h  txt_joyaxis.c  txt_joyaxis.h  txt_joybinput.c  txt_joybinput.h  txt_keyinput.c  txt_keyinput.h  txt_mouseinput.c  txt_mouseinput.h
textscreen/: textscreen.h  txt_button.c  txt_button.h  txt_checkbox.c  txt_checkbox.h  txt_conditional.c  txt_conditional.h  txt_desktop.c  txt_desktop.h  txt_dropdown.c  txt_dropdown.h  txt_fileselect.c  txt_fileselect.h  txt_gui.c  txt_gui.h  txt_inputbox.c  txt_inputbox.h  txt_io.c  txt_io.h  txt_label.c  txt_label.h  txt_main.h  txt_radiobutton.c  txt_radiobutton.h  txt_scrollpane.c  txt_scrollpane.h  txt_sdl.c  txt_sdl.h  txt_separator.c  txt_separator.h  txt_spinctrl.c  txt_spinctrl.h  txt_strut.c  txt_strut.h  txt_table.c  txt_table.h  txt_utf8.c  txt_utf8.h  txt_widget.c  txt_widget.h  (+4 more)
