AUX_DIST_GEN =                          \
        $(ac_aux_dir)/install-sh        \
        $(ac_aux_dir)/missing

DOC_FILES=                              \
        README.md

EXTRA_DIST=                             \
        $(AUX_DIST_GEN)

MAINTAINERCLEANFILES =  $(AUX_DIST_GEN)

SUBDIRS=textscreen opl data src

DIST_SUBDIRS=pkg $(SUBDIRS)
